--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
+    "express-session": "^1.17.3",
+    "express-socket.io-session": "^1.3.5",
     "http-errors": "~1.6.3",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "socket.io": "^4.5.4"
   }
 }
